[gd_scene load_steps=5 format=3 uid="uid://c4kq6w0a3clwt"]

[ext_resource type="Script" path="res://ui/Inventory.gd" id="1_4k2u2"]
[ext_resource type="Texture2D" uid="uid://iuk5lkwif0jb" path="res://textures/novice-plant-hat.png" id="1_s7vem"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3tgxs"]
bg_color = Color(0.133333, 0.0784314, 0.027451, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ikvpu"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.105882, 0.0588235, 0.411765, 1)

[node name="Inventory" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3tgxs")
script = ExtResource("1_4k2u2")

[node name="Equipment" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="HatPanel" type="PanelContainer" parent="Equipment"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ikvpu")

[node name="HatInfo" type="VBoxContainer" parent="Equipment/HatPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="Equipment/HatPanel/HatInfo"]
layout_mode = 2
text = "Hat"

[node name="HatImage" type="TextureRect" parent="Equipment/HatPanel/HatInfo"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("1_s7vem")

[node name="HatName" type="Label" parent="Equipment/HatPanel/HatInfo"]
layout_mode = 2
text = "Novice Plant Hat
"

[node name="CloakPanel" type="PanelContainer" parent="Equipment"]
layout_mode = 2

[node name="CloakInfo" type="VBoxContainer" parent="Equipment/CloakPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="Equipment/CloakPanel/CloakInfo"]
layout_mode = 2
text = "Cloak
"

[node name="CloakImage" type="TextureRect" parent="Equipment/CloakPanel/CloakInfo"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("1_s7vem")

[node name="CloakName" type="Label" parent="Equipment/CloakPanel/CloakInfo"]
layout_mode = 2
text = "None
"

[node name="BootsBox" type="VBoxContainer" parent="Equipment"]
layout_mode = 2

[node name="Label" type="Label" parent="Equipment/BootsBox"]
layout_mode = 2
text = "Boots
"

[node name="VBoxContainer" type="VBoxContainer" parent="Equipment/BootsBox"]
layout_mode = 2

[node name="BootsImage" type="TextureRect" parent="Equipment/BootsBox/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("1_s7vem")

[node name="BootsName" type="Label" parent="Equipment/BootsBox/VBoxContainer"]
layout_mode = 2
text = "None
"

[node name="WandBox" type="VBoxContainer" parent="Equipment"]
layout_mode = 2

[node name="Label" type="Label" parent="Equipment/WandBox"]
layout_mode = 2
text = "Wand
"

[node name="VBoxContainer" type="VBoxContainer" parent="Equipment/WandBox"]
layout_mode = 2

[node name="WandImage" type="TextureRect" parent="Equipment/WandBox/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("1_s7vem")

[node name="WandName" type="Label" parent="Equipment/WandBox/VBoxContainer"]
layout_mode = 2
text = "None

"
